# chicken-defense-game

./: .gitignore  Animation.h  Atlas.h  Bullet.h  CMakeLists.txt  Camera.h  Chicken.h  ChickenFast.h  ChickenMedium.h  ChickenSlow.h  Makefile  README.md  README_CMAKE.md  Vector2.h  build.sh  build_web.sh  main.cpp  main_web.cpp  mingw-w64-toolchain.cmake  setup_windows_sdl.sh
